--- a/trackers.html
+++ b/trackers.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="top-bar">
-  <a href="landing.html">
+  <a href="index.html">
     <button class="back-btn">⬅ Back</button>
   </a>
 
@@ -37,7 +37,7 @@
   </div>
 
   <div class="right">
-    <img src="/image/20945937.jpg">
+    <img src="image/20945937.jpg">
   </div>
 
 </div>
