--- a/trackers.html
+++ b/trackers.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="right">
-    <img src="image/20945937.jpg">
+    <img src="image/pexels-gabby-k-6289030.jpg">
   </div>
 
 </div>
